// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addServerEpic actions snapshot when api rejects promise with error 1`] = `
Array [
  Object {
    "type": "AddServerForm/SUBMIT_BUTTON_CLICKED",
    "values": Object {
      "name": "name",
      "port": 3000,
      "secure": false,
      "type": "http",
    },
  },
  Object {
    "reason": "error message",
    "type": "addServer/FAILED",
  },
]
`;

exports[`addServerEpic actions snapshot when api resolves promise with server details 1`] = `
Array [
  Object {
    "type": "AddServerForm/SUBMIT_BUTTON_CLICKED",
    "values": Object {
      "name": "name",
      "port": 3000,
      "secure": false,
      "type": "http",
    },
  },
  Object {
    "params": Object {
      "data": Object {
        "id": "server-id",
        "name": "name",
        "port": 3000,
        "secure": false,
        "type": "http",
      },
    },
    "type": "addServer/SUCCEED",
  },
]
`;
